<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_import"
            android:icon="@drawable/import_icon"
            android:title="@string/menu_import" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/help_icon"
            android:title="@string/menu_help" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/about_krebs_icon"
            android:title="@string/menu_info" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
    </group>

</menu>
