<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.repeatapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_import"
        android:name="com.example.repeatapp.ui.importfile.ImportFragment"
        android:label="@string/menu_import"
        tools:layout="@layout/fragment_importfile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.repeatapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.repeatapp.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.repeatapp.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />

    <fragment
        android:id="@+id/nav_edit_list"
        android:name="com.example.repeatapp.EditList"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_edit_list" />

    <fragment
        android:id="@+id/nav_play_list"
        android:name="com.example.repeatapp.PlayList"
        android:label="@string/menu_home"
        tools:layout="@layout/activity_play_list" />

</navigation>